checking refresh actuator is working

--- a/microservice01-dev.properties
+++ b/microservice01-dev.properties
@@ -1,2 +1,2 @@
-microservice01.env.name=development
+microservice01.env.name=development new
 microservice01.env.description=microservice01 development configuration
